# ARSandbox

./: .gitignore  CMakeLists.txt  Launch sandbox.ahk  README.md  manual.txt  settings.conf  top-bottom-neighbors-swapped.patch
docs/: ARSandBox_Manual_ENG.tex  ARSandBox_Manual_ITA.tex
src/: main.cpp
src/game/: Animal.cpp  Animal.hpp  Drop.cpp  Drop.h  Drop.hpp  GameManager.cpp  GameManager.hpp  Grid.cpp  Grid.hpp  Simulation.cpp  Simulation.hpp  Sphere.cpp  Sphere.hpp  util.hpp
src/geom/: Matrix3.hpp  Point2.hpp  Point3.hpp  RK4.hpp  Triangulator.cpp  Triangulator.hpp  UnitSquareMapping.cpp  UnitSquareMapping.hpp
src/geom/triangle/: triangle.cpp  triangle.hpp
src/kinect/: FakeKinectManager.hpp  IKinectManager.hpp  IKinectProcessor.hpp  KinectManager.cpp  KinectManager.hpp
src/qt/: KinectComunicator.cpp  KinectComunicator.hpp  MainView.cpp  MainView.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui
src/resource/: Checkerboard.frag  HeightMap.frag  HeightMap.vert  game.qrc  main.qrc  resources.qrc  terrain.qrc
src/resource/animals/: cow.eps  fish1.eps
src/resource/shaders/: HeightMap.frag
